--- a/Changes
+++ b/Changes
@@ -1,6 +1,7 @@
 Release history for {{$dist->name}}
 
 {{$NEXT}}
+          remove the unneeded prerequisite on perl 5.12
 
 0.001     2010-10-18 21:40:38 America/New_York
 
