--- a/Changes
+++ b/Changes
@@ -1,6 +1,7 @@
 Release history for {{$dist->name}}
 
 {{$NEXT}}
+          avoid non-portable %T strftime format
 
 0.005     2010-10-23 22:18:55 America/New_York
           require Test::More 0.96
