--- a/Changes
+++ b/Changes
@@ -1,6 +1,8 @@
 Release history for {{$dist->name}}
 
 {{$NEXT}}
+        - update packaging and metadata
+        - minimum required Perl is now v5.12
 
 0.008     2016-07-04 11:37:17-04:00 America/New_York
           - switch from JSON to JSON::MaybeXS
